'zh-CN' BCP-47 tag
translations sources:
https://github.com/withastro/starlight/blob/main/docs/astro.config.mjs

https://github.com/liruifengv/starlight/blob/main/docs/src/content/docs/zh-cn/guides/project-structure.mdx

--- a/docs/src/content/docs/pt-br/reference/configuration.mdx
+++ b/docs/src/content/docs/pt-br/reference/configuration.mdx
@@ -157,19 +157,19 @@ Se o seu site é multilíngue, a `label` de cada item é considerada como estand
 
 ```js
 sidebar: [
-  // um exemplo de barra lateral com rótulos traduzidos para o Francês.
+  // um exemplo de barra lateral com rótulos traduzidos para o Chinês Simplificado.
   {
     label: 'Comece Aqui',
-    translations: { fr: 'Commencez ici' },
+    translations: { 'zh-CN': '从这里开始' },
     items: [
       {
         label: 'Introdução',
-        translations: { fr: 'Bien démarrer' },
+        translations: { 'zh-CN': '开始使用' },
         link: '/introducao',
       },
       {
         label: 'Estrutura de Projetos',
-        translations: { fr: 'Structure du projet' },
+        translations: { 'zh-CN': '项目结构' },
         link: '/estrutura',
       },
     ],
