translate ThemeDesigner presets

--- a/docs/src/content/docs/id/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/id/guides/css-and-tailwind.mdx
@@ -250,13 +250,13 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 <ThemeDesigner
 	labels={{
 		presets: {
-			label: 'Presets',
-			ocean: 'Ocean',
-			forest: 'Forest',
-			oxide: 'Oxide',
+			label: 'Preset',
+			ocean: 'Lautan',
+			forest: 'Hutan',
+			oxide: 'Oksida',
 			nebula: 'Nebula',
 			default: 'Default',
-			random: 'Random',
+			random: 'Acak',
 		},
 		editor: {
 			accentColor: 'Aksen',
