--- a/docs/src/content/docs/reference/test.mdx
+++ b/docs/src/content/docs/reference/test.mdx
@@ -9,5 +9,8 @@ An image with a height of 100px:
 An image without a height:
 <img src="https://raw.githubusercontent.com/withastro/docs/main/public/default-og-image.png" alt="default og" />
 
+A local image, automatically processed by Astro assets support:
+![Local image](../../../assets/showcase/felicity.pages.dev.png)
+
 for the memes
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=G7YuhKpPkLFnXKQb&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
