--- a/docs/src/content/docs/tr/guides/sidebar.mdx
+++ b/docs/src/content/docs/tr/guides/sidebar.mdx
@@ -187,9 +187,9 @@ Aşağıdaki gibi kenar çubuğu oluşturulacaktır:
 
 #### Önbölümde otomatik oluşturulmuş bağlantıları özelleştirmek
 
-Özel sayfalarınızda [`kenar çubuğu` önbölüm alanı](/reference/frontmatter/#sidebar)'nı otomatik oluşturulan bağlantılarınızı özelleştirmek için kullanın.
+Özel sayfalarınızda [`kenar çubuğu` önbölüm alanı](/tr/reference/frontmatter/#sidebar)'nı otomatik oluşturulan bağlantılarınızı özelleştirmek için kullanın.
 
-Kenar çubuğu önbölüm ayarları bir bağlantıya [özel isim](/tr/reference/frontmatter/#label) ya da [etiket](/tr/reference/frontmatter/#badge) eklemenize, kenar çubuğundan bir bağlantı [gizlemenize](/reference/frontmatter/#hidden) ya da [özel sıralama](/reference/frontmatter/#order) tanımlamanıza olanak sağlar.
+Kenar çubuğu önbölüm ayarları bir bağlantıya [özel isim](/tr/reference/frontmatter/#label) ya da [etiket](/tr/reference/frontmatter/#badge) eklemenize, kenar çubuğundan bir bağlantı [gizlemenize](/tr/reference/frontmatter/#hidden) ya da [özel sıralama](/tr/reference/frontmatter/#order) tanımlamanıza olanak sağlar.
 
 ```md
 ---
