--- a/docs/src/content/docs/uk/guides/components.mdx
+++ b/docs/src/content/docs/uk/guides/components.mdx
@@ -7,7 +7,7 @@ description: Використання компонентів у MDX із Starlig
 Приклади можуть включати картку з посиланням або вбудовування YouTube.
 Starlight підтримує використання компонентів у файлах [MDX](https://mdxjs.com/) і надає деякі загальні компоненти для використання.
 
-[Докладніше про створення компонентів у Astro Docs](https://docs.astro.build/en/core-concepts/astro-components/).
+[Докладніше про створення компонентів у Astro Docs](https://docs.astro.build/ru/core-concepts/astro-components/).
 
 ## Використання компонента
 
@@ -30,8 +30,8 @@ import AnotherComponent from '../../components/AnotherComponent.astro';
 </AnotherComponent>
 ```
 
-Оскільки Starlight працює на базі Astro, ви можете додати підтримку компонентів, створених за допомогою будь-якої [підтримуваної структури інтерфейсу користувача (React, Preact, Svelte, Vue, Solid, Lit і Alpine)](https://docs.astro.build/en/ core-concepts/framework-components/) у ваших файлах MDX.
-Дізнайтеся більше про [використання компонентів у MDX](https://docs.astro.build/en/guides/markdown-content/#using-components-in-mdx) у документах Astro.
+Оскільки Starlight працює на базі Astro, ви можете додати підтримку компонентів, створених за допомогою будь-якої [підтримуваної структури інтерфейсу користувача (React, Preact, Svelte, Vue, Solid, Lit і Alpine)](https://docs.astro.build/ru/core-concepts/framework-components/) у ваших файлах MDX.
+Дізнайтеся більше про [використання компонентів у MDX](https://docs.astro.build/ru/guides/markdown-content/#using-components-in-mdx) у документах Astro.
 
 ### Сумісність зі стилями Starlight
 
