--- a/docs/src/content/docs/uk/index.mdx
+++ b/docs/src/content/docs/uk/index.mdx
@@ -25,7 +25,7 @@ hero:
      - text: Почати
        icon: right-arrow
        variant: primary
-       link: /ua/getting-started/
+       link: /uk/getting-started/
      - text: Відкрити в GitHub
        icon: external
        link: https://github.com/withastro/starlight
