--- a/docs/src/content/docs/reference/test.mdx
+++ b/docs/src/content/docs/reference/test.mdx
@@ -13,4 +13,6 @@ A local image, automatically processed by Astro assets support:
 ![Local image](../../../assets/showcase/felicity.pages.dev.png)
 
 for the memes
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=G7YuhKpPkLFnXKQb&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=G7YuhKpPkLFnXKQb&" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="297" height="527" src="https://www.youtube.com/embed/GOihOAcIgMw" title="😓 Web dev&#39;s biggest buzzword, explained? #webdevelopment #programming" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
