--- a/docs/src/content/docs/id/guides/customization.mdx
+++ b/docs/src/content/docs/id/guides/customization.mdx
@@ -105,7 +105,7 @@ export default defineConfig({
 Secara default, halaman Starlight menggunakan tata letak dengan bilah navigasi global dan daftar isi yang menunjukkan judul halaman saat ini.
 
 Anda dapat menerapkan tata letak halaman yang lebih lebar tanpa bilah samping dengan mengatur [`template: splash`](/id/reference/frontmatter/#template) di frontmatter halaman.
-Ini sangat cocok untuk halaman utama dan Anda dapat melihatnya secara langsung di [halaman utama website ini](/).
+Ini sangat cocok untuk halaman utama dan Anda dapat melihatnya secara langsung di [halaman utama website ini](/id/).
 
 ```md
 ---
