--- a/docs/src/content/docs/id/guides/customization.mdx
+++ b/docs/src/content/docs/id/guides/customization.mdx
@@ -263,7 +263,7 @@ Anda dapat menyesuaikannya dengan menambahkan file `404.md` (atau `404.mdx`) ke 
 
 </FileTree>
 
-Anda dapat menggunakan semua teknik tata letak dan penyesuaian halaman Starlight dalam halaman 404 Anda. Sebagai contoh, halaman 404 default menggunakan [template `splash`](#page-layout) dan komponen [`hero`](/id/reference/frontmatter/#hero) di frontmatter:
+Anda dapat menggunakan semua teknik tata letak dan penyesuaian halaman Starlight dalam halaman 404 Anda. Sebagai contoh, halaman 404 default menggunakan [template `splash`](#tata-letak-halaman) dan komponen [`hero`](/id/reference/frontmatter/#hero) di frontmatter:
 
 ```md
 ---
