found some weird unicode char in title

--- a/docs/src/content/docs/de/reference/configuration.mdx
+++ b/docs/src/content/docs/de/reference/configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: Konfigurations­referenz
+title: Konfigurationsreferenz
 description: Ein Überblick über alle von Starlight unterstützten Konfigurationsoptionen.
 ---
 
