--- a/docs/src/content/docs/de/reference/configuration.mdx
+++ b/docs/src/content/docs/de/reference/configuration.mdx
@@ -195,7 +195,18 @@ type SidebarItem = {
 );
 ```
 
-**Typ:** <code>{ \[dir: string\]: [LocaleConfig](#localeconfig) }</code>
+#### `BadgeConfig`
+
+```ts
+interface BadgeConfig {
+	text: string;
+	variant: 'note' | 'tip' | 'caution' | 'danger' | 'success' | 'default';
+}
+```
+
+### `locales`
+
+**Typ:** <code>\{ \[dir: string\]: [LocaleConfig](#localeconfig) \}</code>
 
 [Konfiguriere die Internationalisierung (i18n)](/de/guides/i18n/) für Ihre Website, indem du festlegst, welche `Locales` unterstützt werden.
 
