--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -212,7 +212,7 @@ export default defineConfig({
 });
 ```
 
-## Links bearbeiten
+## Bearbeitungslinks
 
 Starlight kann einen "Seite bearbeiten"-Link in der Fußzeile jeder Seite anzeigen.
 Dies macht es dem Leser leicht, die zu bearbeitende Datei zu finden, um deine Dokumentation zu verbessern.
