--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -41,7 +41,7 @@ Wird die folgende Seitenleiste automatisch generiert:
 		{
 			label: 'Referenz',
 			items: [
-				{ label: 'Konfiguration Referenz', link: '/reference/configuration/' },
+				{ label: 'Konfigurationsreferenz', link: '/reference/configuration/' },
 			],
 		},
 	]}
