--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -179,7 +179,7 @@ Wird die folgende Seitenleiste erzeugt:
 				{ label: 'Komponenten', link: '/guides/components/' },
 				{ label: 'Internationalisierung (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'fortgeschritten',
+					label: 'advanced',
 					items: [
 						{ label: 'Projektstruktur', link: '/guides/project-structure/' },
 					],
