--- a/docs/src/content/docs/de/showcase.mdx
+++ b/docs/src/content/docs/de/showcase.mdx
@@ -1,5 +1,5 @@
 ---
-title: Starlight Showcase
+title: Starlight Schaufenster
 description: Entdecke Seiten, die mit Starlight gebaut wurden und Community-Tools, die Starlight erweitern!
 ---
 
