Small formatting fixes in `/de/` pages

--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -278,8 +278,9 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	}}
 >
 	<Fragment slot="css-docs">
-		Füge das folgende CSS in deinem Projekt in eine [benutzerdefinierte CSS-Datei](#custom-css-styles) 
-		ein, um dieses Theme auf deiner Website anzuwenden.
+		Füge das folgende CSS in deinem Projekt in eine [benutzerdefinierte
+		CSS-Datei](#benutzerdefinierte-css-styles-stile) ein, um dieses Theme auf
+		deiner Website anzuwenden.
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		Das folgende Beispiel
