--- a/docs/src/content/docs/pt-br/index.mdx
+++ b/docs/src/content/docs/pt-br/index.mdx
@@ -22,7 +22,7 @@ hero:
   image:
     file: ../../../assets/hero-star.webp
   actions:
-    - text: Introdução
+    - text: Começar
       icon: right-arrow
       variant: primary
       link: /pt-br/getting-started/
