feat: add secondary variant to View on Github link

--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -23,6 +23,7 @@ hero:
       link: /de/getting-started/
     - text: Auf GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
