--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /es/getting-started/
     - text: Ver en GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
