--- a/docs/src/content/docs/fr/index.mdx
+++ b/docs/src/content/docs/fr/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /fr/getting-started/
     - text: Voir sur GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
