--- a/docs/src/content/docs/id/index.mdx
+++ b/docs/src/content/docs/id/index.mdx
@@ -23,6 +23,7 @@ hero:
       link: /id/getting-started/
     - text: Lihat di GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
