--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /getting-started/
     - text: View on GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
