--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -23,6 +23,7 @@ hero:
       link: /ja/getting-started/
     - text: GitHubで見る
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
