--- a/docs/src/content/docs/ko/index.mdx
+++ b/docs/src/content/docs/ko/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /ko/getting-started/
     - text: GitHub에서 보기
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
