--- a/docs/src/content/docs/ru/index.mdx
+++ b/docs/src/content/docs/ru/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /ru/getting-started/
     - text: Открыть в GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
