--- a/docs/src/content/docs/tr/index.mdx
+++ b/docs/src/content/docs/tr/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: getting-started
     - text: Github'da Görüntüle
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
