--- a/docs/src/content/docs/zh-cn/index.mdx
+++ b/docs/src/content/docs/zh-cn/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /zh-cn/getting-started/
     - text: 在 GitHub 上查看
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
