--- a/docs/src/content/docs/it/index.mdx
+++ b/docs/src/content/docs/it/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /it/getting-started/
     - text: Vedi su GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
