--- a/docs/src/content/docs/pt-br/index.mdx
+++ b/docs/src/content/docs/pt-br/index.mdx
@@ -28,6 +28,7 @@ hero:
       link: /pt-br/getting-started/
     - text: Veja no GitHub
       icon: external
+      variant: secondary
       link: https://github.com/withastro/starlight
 ---
 
