--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -211,7 +211,7 @@ import starlightPlugin from'@astrojs/starlight-tailwind';
 import colors from 'tailwindcss/colors';
 
 /** @type {import('tailwindcss').Config} */
-export default = {
+export default {
 	content: ['./src/**/*.{astro,html,js,jsx,md,mdx,svelte,ts,tsx,vue}'],
 	theme: {
 		extend: {
