--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -141,12 +141,12 @@ If a translation is not yet available for a language, Starlight will show reader
 
 ## Translate Starlight's UI
 
-import I18nList from '../../../components/i18n-list.astro';
+import LanguagesList from '../../../components/languages-list.astro';
 
 In addition to hosting translated content files, Starlight allows you to translate the default UI strings (e.g. the "On this page" heading in the table of contents) so that your readers can experience your site entirely in the selected language.
 
-<I18nList /> translated UI strings are provided out of the box, and we welcome
-[contributions to add more default
+<LanguagesList /> translated UI strings are provided out of the box, and we
+welcome [contributions to add more default
 languages](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
 You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
