--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -93,7 +93,20 @@ You can add support for Markdoc by installing the experimental [Astro Markdoc in
 Add new pages to your site by creating `.md` or `.mdx` files in `src/content/docs/`.
 Use sub-folders to organize your files and to create multiple path segments.
 
-For example, a file at `src/content/docs/hello-world.md` will be published at `your-site.com/hello-world` and a file at `src/content/docs/guides/faq.md` will be published at `your-site.com/guides/faq`.
+For example, the following file structure will generate pages at `example.com/hello-world` and `example.com/guides/faq`:
+
+import FileTree from '../../components/file-tree.astro';
+
+<FileTree>
+
+- src/
+  - content/
+    - docs/
+      - guides/
+        - faq.md
+      - hello-world.md
+
+</FileTree>
 
 #### Type-safe frontmatter
 
