--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 Starlight is a full-featured documentation theme built on top of the [Astro](https://astro.build) framework.
 This guide will help you get started with a new project.
-See the [manual setup instructions](/manual-setup/) to add the Starlight integration to an existing project.
+See the [manual setup instructions](/manual-setup/) to add Starlight to an existing Astro project.
 
 ## Quick Start
 
