[i18nIgnore] Fix links

--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -47,7 +47,7 @@ Wird die folgende Seitenleiste automatisch generiert:
 	]}
 />
 
-Erfahre mehr über autogenerierte Seitenleisten im Abschnitt [autogenerierte Gruppen](#autogenerierte-gruppen).
+Erfahre mehr über autogenerierte Seitenleisten im Abschnitt [autogenerierte Gruppen](#automatisch-erzeugte-gruppen).
 
 ## Links und Linkgruppen hinzufügen
 
