--- a/docs/src/content/docs/it/guides/sidebar.mdx
+++ b/docs/src/content/docs/it/guides/sidebar.mdx
@@ -51,7 +51,7 @@ Scopri di più sulle barre laterali generate automaticamente nella sezione [grup
 
 ## Aggiungi collegamenti e gruppi di collegamenti
 
-Per configurare i [link](#link) e i [gruppi di link](#gruppi) della barra laterale (all'interno di un'intestazione comprimibile), utilizza la proprietà [`starlight.sidebar`](/it/reference/configuration/#sidebar) in `astro.config.mjs`.
+Per configurare i [link](#collegamenti) e i [gruppi di link](#gruppi) della barra laterale (all'interno di un'intestazione comprimibile), utilizza la proprietà [`starlight.sidebar`](/it/reference/configuration/#sidebar) in `astro.config.mjs`.
 
 Combinando collegamenti e gruppi, puoi creare un'ampia varietà di layout della barra laterale.
 
