--- a/docs/src/content/docs/tr/guides/sidebar.mdx
+++ b/docs/src/content/docs/tr/guides/sidebar.mdx
@@ -50,7 +50,7 @@ Aşdağıdaki gibi kenar çubuğu otomatik olarak oluşturulacaktır:
 	]}
 />
 Otomatik oluşturulan kenar çubukları ile ilgili daha fazla bilgiye [otomatik oluşturulan
-gruplar](#otomatik-oluşturulan-gruplar) bölümünden ulaşabilirsiniz.
+gruplar](#otomatik-oluşturulmuş-gruplar) bölümünden ulaşabilirsiniz.
 
 ## Bağlantı ve Bağlantı Grupları Ekleme
 
