[i18nIgnore] Fix a few more

--- a/docs/src/content/docs/zh-cn/guides/customization.mdx
+++ b/docs/src/content/docs/zh-cn/guides/customization.mdx
@@ -391,7 +391,7 @@ hero:
 
 ### 使用字体
 
-要将设置好的字体应用于你的站点，请在[自定义 CSS 文件](/zh-cn/guides/css-and-tailwind/#custom-css-styles)中使用所选字体的名称。例如，要在整个站点上覆盖 Starlight 的默认字体，请设置`--sl-font`自定义属性：
+要将设置好的字体应用于你的站点，请在[自定义 CSS 文件](/zh-cn/guides/css-and-tailwind/#自定义-css-样式)中使用所选字体的名称。例如，要在整个站点上覆盖 Starlight 的默认字体，请设置`--sl-font`自定义属性：
 
 ```css
 /* src/styles/custom.css */
@@ -411,4 +411,4 @@ main {
 }
 ```
 
-按照[自定义 CSS](/zh-cn/guides/css-and-tailwind/#custom-css-styles)将样式添加到你的站点。
+按照[自定义 CSS](/zh-cn/guides/css-and-tailwind/#自定义-css-样式)将样式添加到你的站点。
