[i18nIgnore] Last few

--- a/docs/src/content/docs/ru/guides/customization.mdx
+++ b/docs/src/content/docs/ru/guides/customization.mdx
@@ -270,7 +270,7 @@ export default defineConfig({
 </FileTree>
 
 Вы можете использовать другие макеты и настройки страниц Starlight в вашей странице 404.
-Например, страница 404 по умолчанию использует макет [`splash`](#page-layout) и компонент [`hero`](/ru/reference/frontmatter/#hero) в метаданных.
+Например, страница 404 по умолчанию использует макет [`splash`](#макеты-страниц) и компонент [`hero`](/ru/reference/frontmatter/#hero) в метаданных.
 
 ```md
 ---
@@ -294,8 +294,8 @@ hero:
 
 ### Настройка шрифтов
 
-Если у вас уже есть файлы шрифтов, следуйте [руководству по локальной настройке](#set-up-local-font-files).
-Чтобы использовать Google Fonts, следуйте [руководству по настройке Fontsource](#set-up-a-fontsource-font).
+Если у вас уже есть файлы шрифтов, следуйте [руководству по локальной настройке](#настройка-локальных-шрифтов).
+Чтобы использовать Google Fonts, следуйте [руководству по настройке Fontsource](#настройка-шрифта-из-fontsource).
 
 #### Настройка локальных шрифтов
 
