--- a/docs/src/content/docs/ru/guides/sidebar.mdx
+++ b/docs/src/content/docs/ru/guides/sidebar.mdx
@@ -51,7 +51,7 @@ import SidebarPreview from '../../../../components/sidebar-preview.astro';
 	]}
 />
 
-Узнайте больше о автоматически генерируемых боковых панелях в разделе [Автоматически Генерируемые Группы](##автогенерируемые-группы).
+Узнайте больше о автоматически генерируемых боковых панелях в разделе [Автоматически Генерируемые Группы](#автогенерируемые-группы).
 
 ## Добавление ссылок и групп ссылок
 
