--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -81,7 +81,7 @@ Abre esta URL para comenzar a navegar por tu sitio.
 
 ### Añade contenido
 
-Starlight está listo para que añadas nuevo contenido o traigas ¡tus archivos existentes!.
+Starlight está listo para que añadas nuevo contenido o ¡traigas tus archivos existentes!.
 
 #### Formatos de archivo
 
