[i18nIgnore] Fix links (#1039)

--- a/docs/src/content/docs/ru/guides/sidebar.mdx
+++ b/docs/src/content/docs/ru/guides/sidebar.mdx
@@ -51,12 +51,12 @@ import SidebarPreview from '../../../../components/sidebar-preview.astro';
 	]}
 />
 
-Узнайте больше о автоматически генерируемых боковых панелях в разделе [Автоматически Генерируемые Группы](##автогенерируемые-группы).
+Узнайте больше о автоматически генерируемых боковых панелях в разделе [Автоматически Генерируемые Группы](#автогенерируемые-группы).
 
 ## Добавление ссылок и групп ссылок
 
 Чтобы настроить свои [ссылки](#ссылки) и [группы ссылок](#группировка) (внутри сворачиваемого заголовка) в боковой панели,
-используйте свойство [`starlight.sidebar`](/reference/configuration/#sidebar) в `astro.config.mjs`.
+используйте свойство [`starlight.sidebar`](/ru/reference/configuration/#sidebar) в `astro.config.mjs`.
 
 Сочетая ссылки и группы, вы можете создавать разнообразные макеты боковой панели.
 
