Fix import paths
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/tr/guides/i18n.mdx
+++ b/docs/src/content/docs/tr/guides/i18n.mdx
@@ -3,7 +3,7 @@ title: Uluslararasılaştırma (i18n)
 description: Starlight sitesinin çoklu dil desteğini etkinleştirmek için nasıl yapılandırılacağını öğrenin.
 ---
 
-import FileTree from '../../../components/file-tree.astro';
+import FileTree from '../../../../components/file-tree.astro';
 
 Starlight, çoklu dil destekli siteler için dahili destek sunar, bu da yönlendirme, geriye dönük içerik ve tam sağdan sola (RTL) dil desteği içerir.
 
