--- a/docs/src/content/docs/tr/reference/configuration.mdx
+++ b/docs/src/content/docs/tr/reference/configuration.mdx
@@ -308,7 +308,7 @@ Varsayılan yerel dil, çeviriler eksik olduğunda yedek içerik sağlamak için
 
 ### `social`
 
-import SocialLinksType from '../../../components/social-links-type.astro';
+import SocialLinksType from '../../../../components/social-links-type.astro';
 
 **Tür:** <SocialLinksType />
 
