--- a/docs/src/content/docs/tr/guides/customization.mdx
+++ b/docs/src/content/docs/tr/guides/customization.mdx
@@ -4,7 +4,7 @@ description: Starlight sitenizi logonuz, özel yazı tipleri, giriş sayfası ta
 ---
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import FileTree from '../../../components/file-tree.astro';
+import FileTree from '../../../../components/file-tree.astro';
 
 Starlight, hızlı bir başlangıç yapmak için yapılandırmaya ihtiyaç duymadan mantıklı varsayılan stiller ve özellikler sunar. Starlight sitesinin görünümünü ve hissini özelleştirmeye başlamak istediğinizde bu rehber size yardımcı olur.
 
