Apply suggestions from code review
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 Starlight es un tema de documentación completo construido sobre el framework [Astro](https://astro.build).
 Esta guía te ayudará a comenzar con un nuevo proyecto. 
-Consulta las [instrucciones de configuración manual](/manual-setup/) para agregar Starlight a un proyecto de Astro existente.
+Consulta las [instrucciones de configuración manual](/es/manual-setup/) para agregar Starlight a un proyecto de Astro existente.
 
 ## Inicio rápido
 
@@ -48,7 +48,7 @@ Prueba Starlight en tu navegador:
 
 ### Inicia el servidor de desarrollo
 
-Cuando trabajas localmente, el [servidor de desarrollo de Astro](https://docs.astro.build/en/reference/cli-reference/#astro-dev) te permite previsualizar tu trabajo y actualiza automáticamente tu navegador cuando realizas cambios.
+Cuando trabajas localmente, el [servidor de desarrollo de Astro](https://docs.astro.build/es/reference/cli-reference/#astro-dev) te permite previsualizar tu trabajo y actualiza automáticamente tu navegador cuando realizas cambios.
 
 Dentro del directorio de tu proyecto, ejecuta el siguiente comando para iniciar el servidor de desarrollo:
 
@@ -122,10 +122,10 @@ Si olvidas algo importante, Starlight te lo hará saber.
 
 ### Siguientes pasos
 
-- **Configura:** Aprende acerca de las opciones comunes en [“Personalizando Starlight”](/guías/personalización/).
-- **Navega:** Configura tu barra lateral siguiendo la guía [“Barra Lateral de Navegación”](/guides/sidebar/).
-- **Componentes:** Descubre tarjetas incorporadas, pestañas y más en la guía [“Componentes”](/guides/components/).
-- **Despliega:** Publica tu trabajo siguiendo la guía [“Despliega tu sitio”](https://docs.astro.build/en/guides/deploy/) en la documentación de Astro.
+- **Configura:** Aprende acerca de las opciones comunes en [“Personalizando Starlight”](/es/guides/customization/).
+- **Navega:** Configura tu barra lateral siguiendo la guía [“Barra Lateral de Navegación”](/es/guides/sidebar/).
+- **Componentes:** Descubre tarjetas incorporadas, pestañas y más en la guía [“Componentes”](/es/guides/components/).
+- **Despliega:** Publica tu trabajo siguiendo la guía [“Despliega tu sitio”](https://docs.astro.build/es/guides/deploy/) en la documentación de Astro.
 
 ## Actualizando Starlight
 
@@ -164,10 +164,10 @@ Consulta el [registro de cambios de Starlight](https://github.com/withastro/star
 
 ## Solución de problemas de Starlight
 
-Utiliza las páginas de referencia de [configuración del proyecto](/reference/configuration/) y [configuración del frontmatter de páginas individuales](/reference/frontmatter/) para asegurarte de que tu sitio de Starlight esté configurado y funcione correctamente. 
+Utiliza las páginas de referencia de [configuración del proyecto](/es/reference/configuration/) y [configuración del frontmatter de páginas individuales](/es/reference/frontmatter/) para asegurarte de que tu sitio de Starlight esté configurado y funcione correctamente. 
 Consulta las guías en la barra lateral para obtener ayuda en la adición de contenido y personalización de tu sitio de Starlight.
 
-Si no encuentras la respuesta en la documentación, visita la [documentación completa de Astro](https://docs.astro.build) para obtener la documentación completa de Astro.
+Si no encuentras la respuesta en la documentación, visita la [documentación completa de Astro](https://docs.astro.build/es/) para obtener la documentación completa de Astro.
 Es posible que tu pregunta se responda comprendiendo cómo funciona Astro en general, debajo de este tema Starlight.
 
 También puedes revisar cualquier problema conocido de [Starlight en GitHub](https://github.com/withastro/starlight/issues) y obtener ayuda en el [Discord de Astro](https://astro.build/chat/) de nuestra activa y amigable comunidad. ¡Publica preguntas en nuestro foro `#support` con la etiqueta "starlight" o visita nuestro canal dedicado `#starlight` para discutir el desarrollo actual y más!
