turkish translate update

--- a/docs/src/content/docs/tr/guides/components.mdx
+++ b/docs/src/content/docs/tr/guides/components.mdx
@@ -20,8 +20,8 @@ HTML etiketleri gibi görünür ancak ilk harfi büyük olarak ismi uyan `import
 title: Dokümantasyonuma hoşgeldiniz.
 ---
 
-import SomeComponent from '../../components/SomeComponent.astro';
-import AnotherComponent from '../../components/AnotherComponent.astro';
+import SomeComponent from '../../../components/SomeComponent.astro';
+import AnotherComponent from '../../../components/AnotherComponent.astro';
 
 <SomeComponent prop="birşey" />
 
