i18n(de): Update translation of `sidebar.mdx` into German
language update

--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -235,7 +235,7 @@ Die `sidebar`-Frontmatter-Konfiguration wird nur für automatisch generierte Lin
 
 ## Abzeichen
 
-Links können auch eine `badge`-Eigenschaft enthalten, um ein Abzeichen neben dem Link-Label anzuzeigen.
+Links, Gruppen und automatisch generierte Gruppen können auch eine `badge`-Eigenschaft enthalten, um ein Abzeichen neben dem jeweiligen Text anzuzeigen.
 
 ```js
 starlight({
